--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required(VERSION 3.0 FATAL_ERROR)
 
-project(BroPluginTCPWriter)
+project(ZeekPluginTCPWriter)
 
-include(BroPlugin)
+include(ZeekPlugin)
 
 find_package(OpenSSL)
 
@@ -11,13 +11,13 @@ if (NOT OPENSSL_FOUND)
 endif ()
 
 include_directories(BEFORE ${OPENSSL_INCLUDE_DIR})
-bro_plugin_begin(Writer TCP)
-bro_plugin_cc(src/Plugin.cc)
-bro_plugin_cc(src/TCP.cc)
-bro_plugin_bif(src/tcpwriter.bif)
-bro_plugin_dist_files(README CHANGES COPYING VERSION)
-bro_plugin_link_library(${OPENSSL_LIBRARIES})
-bro_plugin_end()
+zeek_plugin_begin(Writer TCP)
+zeek_plugin_cc(src/Plugin.cc)
+zeek_plugin_cc(src/TCP.cc)
+zeek_plugin_bif(src/tcpwriter.bif)
+zeek_plugin_dist_files(README CHANGES COPYING VERSION)
+zeek_plugin_link_library(${OPENSSL_LIBRARIES})
+zeek_plugin_end()
 
 file(STRINGS "${CMAKE_CURRENT_SOURCE_DIR}/VERSION" VERSION LIMIT_COUNT 1)
 
